k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging-monnom-MonApplication-frontend
