k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staging-monnom-MonApplication-frontend-deployment
  namespace: staging-monnom-MonApplication-frontend
  labels:
    app: staging-monnom-MonApplication-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: staging-monnom-MonApplication-frontend
  template:
    metadata:
      labels:
        app: staging-monnom-MonApplication-frontend
    spec:
      containers:
        - name: staging-monnom-MonApplication-frontend
          image: corentin35/monnom-MonApplication-frontend:staging-${TAG_VERSION}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: '400m'
              memory: '512Mi'
            limits:
              cpu: '800m'
              memory: '1Gi'
      imagePullSecrets:
        - name: regcred
