k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-monnom-MonApplication-frontend-service
  namespace: staging-monnom-MonApplication-frontend
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: staging-monnom-MonApplication-frontend
